2001-02-14  John Harper  <jsh@eazel.com>

	* version 0.37.2

	* sawfish/wm/commands/move-resize.jl (viable-move-resize-p):
	doh! fixed this properly now, was using the wrong variable to
	get the edge list

	* version 0.37.1

	* sawfish/wm/commands/move-resize.jl (viable-move-resize-p):
	fixed stupid typo in `region' and `border' modes (using
	direction instead of edge list)

2001-02-13  John Harper  <jsh@eazel.com>

	* version 0.37

	* sawfish/wm/state/gnome.jl (gnome-window-class-hacks): 
	* sawfish/wm/state/wm-spec.jl (wm-class-hacks): 
	Look for `Panel/panel_window' instead of `Panel/panel'. This
	may not work well immediately, but it will with the forthcoming
	gnome-core release

	* sawfish/wm/ext/window-history.jl: new command line option
	`--window-history-file=FILE' to specify where to load and store
	the history information

	* sawfish/wm/user.jl (rc-files): new internal variable - the
	list of rc files to try, currently ~/.sawfishrc, ~/.sawfish/rc
	and ~/.sawmillrc

2001-02-10  John Harper  <jsh@eazel.com>

	* sawfish/wm/ext/match-window.jl
	(match-window-grab-x-property): enclose grabbed regexp in
	`^...$' so that it only matches the exact string

2001-02-07  John Harper  <jsh@eazel.com>

	* sawfish/wm/util/window-order.jl (on-viewport-change): only
	call window-order-focus-most-recent if in click-to-focus mode,
	not when not in enter-exit mode

2001-02-06  John Harper  <jsh@eazel.com>

	* sawfish/wm/ext/match-window.jl (match-window-x-properties):
	added WM_WINDOW_ROLE to list of properties

	* sawfish/wm/state/transient.jl (transient-unmap-window): in
	sloppy focus mode avoid focusing on the desktop window just
	because the pointer is over it

2001-02-05  John Harper  <jsh@eazel.com>

	* sawfish/wm/util/recolor-image.jl (make-lut): subtract
	mid-point from 255 not 256. Pointed out by Simon Budig
	<Simon.Budig@unix-ag.org>

2001-01-28  John Harper  <jsh@eazel.com>

	Work to fix bug 5758 (session management doesn't work in `don't