@@ -1,3 +1,8 @@
+2001-02-22  John Harper  <jsh@eazel.com>
+
+	* sawfish/wm/placement.jl (place-window): don't try to place
+	windows with the fixed-position property
+
 2001-02-14  John Harper  <jsh@eazel.com>
 
 	* version 0.37.2
